force-app/main/default/objects/Invoice_Line_Item__c/fields/Assignment_Agreement_Contract__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assignment Agreement, set by the Generate Invoice flow, if this Invoice Line Item is applicable to an assignment.</inlineHelpText>
    <label>Assignment Agreement Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>