force-app/main/default/objects/Invoice_Line_Item__c/fields/Client_Invoicing_Memo__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoicing_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Client Invoicing Memo (if applicable), set when the Invoice Line Item is created through the Generate Invoice flow</inlineHelpText>
    <label>Client Invoicing Memo</label>
    <referenceTo>Client_Invoicing_Memo__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>