force-app/main/default/objects/Invoice_Line_Item__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Values stamped by the Generate Invoice flow used for debugging or historical purposes</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>