force-app/main/default/objects/Invoice_Line_Item__c/fields/Nets_to_Zero__c.field-meta.xml
<CustomField>
    <fullName>Nets_to_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when generating client invoices if Subscription Orders for a Utility Account Number and Project nets to zero. Used by Accounting to easily exclude line items from an invoice.</inlineHelpText>
    <label>Nets to Zero</label>
    <type>Checkbox</type>
</CustomField>