force-app/main/default/objects/Invoice_Line_Item__c/fields/Subscription_Order__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Subscription Order (if applicable), set when the Invoice Line Item is created through the Generate Invoice flow</inlineHelpText>
    <label>Subscription Order</label>
    <referenceTo>Subscription_Order__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>